--- a/OnlineWolf/app/src/main/res/values/strings.xml
+++ b/OnlineWolf/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="button_send">Play</string>
     <string name="edit_message">Enter Name</string>
+    <string name="title_activity_show_login">ShowLogin</string>
 </resources>
