--- a/OnlineWolf/app/src/main/res/values/strings.xml
+++ b/OnlineWolf/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_create_file">CreateFile</string>
     <string name="signup">SIGNUP</string>
     <string name="login">LOGIN</string>
+    <string name="title_activity_start_game">StartGame</string>
 </resources>
